tests/snapshots/snapshots__about_overlay.snap
---
source: tests/snapshots.rs
assertion_line: 137
expression: dump(&buf)
---
 pgman │ test  connected ·┌ about ───────────────────────────────────────┐
┌ editor (e to focus) ────│                                              │─────────────────────────┐
│> (empty — press e to foc│           ██████                  ██████     │                         │
└─────────────────────────│         ████████████████████████████████     │─────────────────────────┘
┌ result ─────────────────│      ████████████████████████████████████    │─────────────────────────┐
│(no rows)                │   ████████████████████████████████████████   │                         │
│                         │   ████████████████████████████████████████   │                         │
│                         │   ████████████████████████████████████████   │                         │
│                         │   ████████████████████████████████████████   │                         │
│                         │   ████████████████████████████████████████   │                         │
│                         │   ████████████████████████████████████████   │                         │
│                         │      ████████████████████████████████████    │                         │
│                         │         ████████████████████████████████     │                         │
│                         │            ████████████████████████████      │                         │
│                         │                     ████████████████         │                         │
│                         │                     ████████████████         │                         │
│                         │                     ██  ████████  ██         │                         │
│                         │                           ████████           │                         │
│                         │                          ██████████          │                         │
│                         │                             ██████           │                         │
│                         │                                              │                         │
│                         │                  pgman 0.0.1                 │                         │
│                         │   k9s-style Postgres TUI for Java/AWS shops  │                         │
│                         │                                              │                         │
│                         │       by Tom Baldwin / Polymorphism Ltd      │                         │
│                         │          license: MIT OR Apache-2.0          │                         │
└─────────────────────────│                                              │─────────────────────────┘
 esc / enter / A close    └──────────────────────────────────────────────┘
