tests/snapshots/snapshots__cell_detail_json_tree_renders_object_with_cursor_on_root.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
 1 empty                                 ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (┌ data · row 1 of 1 · field 1/1 · JSON ────────────────────────────────┐   │
└───│                                                                      │───┘
┌ re│ ▼ { 3 }                                                              │───┐
│dat│   "id": 1                                                            │   │
│{"i│   ▼ "meta": { 1 }                                                    │   │
│   │     "k": "v"                                                         │   │
│   │   ▼ "tags": [ 2 ]                                                    │   │
│   │     [0]: "a"                                                         │   │
│   │     [1]: "b"                                                         │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   tip · JSON cells render as a tree · y yanks the value (or jq path)
