tests/snapshots/snapshots__completion_popup_with_candidates.snap
---
source: tests/snapshots.rs
assertion_line: 203
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor ──────────────────────────────────────────────────────────────────────┐
│> SELECT * FROM us                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ 2 matches · Tab to┐──────────────────────────────────────────────────────────┐
│  users     (table)│                                                          │
│  user_logs (table)│                                                          │
└───────────────────┘                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 type to narrow · tab cycle · esc undo
