tests/snapshots/snapshots__confirm_modal_names_the_statement_not_the_enum_variant.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│           ┌ confirm ─────────────────────────────────────────────┐           │
│           │run (DELETE without WHERE) · will wrap in transaction │           │
│           │                                                      │           │
│           │DELETE FROM orders                                    │           │
│           │                                                      │           │
│           │y = run · n / esc = cancel                            │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   y run · n / esc cancel
