tests/snapshots/snapshots__conn_pick_keeps_the_unresolved_marker_at_50_columns.snap
---
source: tests/snapshots.rs
assertion_line: 772
expression: dumped
---
 pgman │ test  connected · pg 16.0
 1 empty                ctrl-t new · ctrl-w close
┌ editor (e to focus) ───────────────────────────┐
│> (empty — press e to focus)                    │
└────────────────────────────────────────────────┘
┌ result ────────────────────────────────────────┐
│┌ pick a connection · 1/2 ─────────────────────┐│
││▶ [Spring]  dataSource… — unresolved app@ord… ││
││  [project] prod                     app@pro… ││
││                                              ││
││  nothing here connects until you press enter ││
│└──────────────────────────────────────────────┘│
└────────────────────────────────────────────────┘
 RO   ↑↓ / j/k navigate · F1 +3 more
