tests/snapshots/snapshots__connection_picker_confirms_a_discovered_ssh_tunnel.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ —  disconnected
┌ editor (e to focus) ───────────────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                            │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ pgman ─────────────────────────────────────────────────────────────────────────────────┐
│       ┌ open an ssh tunnel? ───────────────────────────────────────────────────┐       │
│       │  ssh tom@bastion.example.com → db.internal:5432                        │       │
│       │                                                                        │       │
│       │  picked project data source 'via-bastion' wants an ssh session first.  │       │
│       │  pgman runs the system ssh binary with your keys, agent and            │       │
│       │  ~/.ssh/config — before any Postgres traffic, so a failed              │       │
│       │  database login would not stop it.                                     │       │
│       │                                                                        │       │
│       │  y proceed · any other key cancels                                     │       │
│       └────────────────────────────────────────────────────────────────────────┘       │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 RO   y proceed · any other key cancels
