tests/snapshots/snapshots__connection_picker_with_two_entries.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ —  disconnected
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ pgman┌ pick a connection · 1/2 ──────────────────────────────────────┐───────┐
│      │▶ [ project] prod     app@prod-db:5432/main  sslmode=default   │       │
│      │  [IntelliJ] staging  app@staging-db:5432/main  sslmode=default│       │
│      │                                                               │       │
│      │  nothing here connects until you press enter                  │       │
│      │  PGPASSWORD is only used with --dsn                           │       │
│      └───────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   ↑↓ / j/k navigate · enter connect · q quit · F1 help
