tests/snapshots/snapshots__editor_with_sql_buffer.snap
---
source: tests/snapshots.rs
assertion_line: 143
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor ──────────────────────────────────────────────────────────────────────┐
│> SELECT id, email                                                            │
│  FROM users                                                                  │
│  WHERE active = true                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   ⏎ runs after ; · alt-⏎ runs · ctrl-e EXPLAIN · ctrl-z undo · F1 +7 more
