tests/snapshots/snapshots__editor_zoomed_60x16.snap
---
source: tests/snapshots.rs
assertion_line: 803
expression: text
---
 pgman │ test  connected · pg 16.0
 1 SELECT id, email               ctrl-t new · ctrl-w close
┌ editor · zoomed (alt-z) ─────────────────────────────────┐
│> SELECT id, email                                        │
│  FROM users                                              │
│  WHERE active = true                                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 RO   editor zoomed · alt-z restores the split
